# apple-silicon-accelerometer

./: .gitignore  README.md  motion_live.py  pyproject.toml  spu_sensor.py
macimu/: __init__.py  _spu.py  filters.py  orientation.py
