[project]
name = "macimu"
version = "0.1.0"
license = "MIT"
description = "read the undocumented mems accelerometer + gyroscope on apple silicon macs via iokit hid"
authors = [{ name = "Olivier Bourbonnais", email = "olvvier.b@gmail.com" }]
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/olvvier/apple-silicon-accelerometer"

[project.optional-dependencies]
demo = ["PyWavelets>=1.4"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["macimu*"]
